force-app/main/default/objects/OCLQS_Email_Recipients__c/OCLQS_Email_Recipients__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To hold email recipients for each email template. Used in apex class</description>
    <label>OCLQS Email Recipients</label>
</CustomObject>