force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/BCC__c.field-meta.xml
<CustomField>
    <fullName>BCC__c</fullName>
    <description>BCC fields</description>
    <inlineHelpText>BCC Email Fields - Object Field</inlineHelpText>
    <label>BCC</label>
    <type>TextArea</type>
</CustomField>