force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <description>Add comma separated custom field for CC Recipients</description>
    <inlineHelpText>Comma Separated Field API for CC - Object Field</inlineHelpText>
    <label>CC</label>
    <type>TextArea</type>
</CustomField>