force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/CC_Role__c.field-meta.xml
<CustomField>
    <fullName>CC_Role__c</fullName>
    <description>Comma separated Role Name for CC</description>
    <inlineHelpText>Comma separated Role Name for CC</inlineHelpText>
    <label>CC Role</label>
    <type>TextArea</type>
</CustomField>