force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <description>object API Name to send emails</description>
    <inlineHelpText>object API Name</inlineHelpText>
    <label>Object API</label>
    <length>40</length>
    <type>Text</type>
</CustomField>