force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <inlineHelpText>Template Unique Name</inlineHelpText>
    <label>Template Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>