force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Add comma separated custom field for To Recipients</description>
    <inlineHelpText>Comma Separated Field API For To - Object Field</inlineHelpText>
    <label>To</label>
    <type>TextArea</type>
</CustomField>