force-app/main/default/objects/OCLQS_Email_Recipients__c/fields/To_Role__c.field-meta.xml
<CustomField>
    <fullName>To_Role__c</fullName>
    <description>Comma separated Role Name For TO</description>
    <inlineHelpText>Comma separated Role Name for To</inlineHelpText>
    <label>To Role</label>
    <type>TextArea</type>
</CustomField>